[tool.poetry]
name = "project-boardgames-data-validation"
version = "0.1.0"
description = "BGG Data Quality project using Great Expectations and Delta Lake medallion architecture"
authors = ["Leo Lis <unkind58@gmail.com>"]
readme = "README.md"
# packages = [{ include = "project_boardgames_data_validation" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core stack
pyspark = "3.5.0"
pandas = "^2.1.0"

# Data generation
faker = "^25.0.0"

# Data validation
great-expectations = "0.18.22"
great-expectations-experimental = "^0.1.20240305009"

# Visualization / exploration
matplotlib = "*"
seaborn = "*"
ipykernel  = "*"
ipywidgets = "8.1.1"

# Cloud / optional
boto3 = "^1.34.56"
botocore = "^1.34.56"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"